--- a/public/index.html
+++ b/public/index.html
@@ -39,5 +39,26 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script
+      async
+      data-desktop-y-offset="0"
+      data-mobile-y-offset="0"
+      data-desktop-disable-reviews="false"
+      data-desktop-enable-custom="false"
+      data-desktop-position="right"
+      data-desktop-custom-width="156"
+      data-desktop-enable-fadeout="false"
+      data-disable-mobile="false"
+      data-disable-trustbadge="false"
+      data-mobile-custom-width="156"
+      data-mobile-disable-reviews="false"
+      data-mobile-enable-custom="false"
+      data-mobile-position="left"
+      data-mobile-enable-topbar="false"
+      data-mobile-enable-fadeout="true"
+      data-color-scheme="light"
+      charset="UTF-8"
+      src="http://widgets.trustedshops.com/js/XDAF89B46C1FD0BEBBCEB4F9BB36979AA.js"
+    ></script>
   </body>
 </html>
